<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".boundary.SellFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/notfound" />

            <Button
                android:id="@+id/btnPhoto"
                android:layout_width="225dp"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:background="@drawable/uploadimage"
                android:text="@string/upload_photo"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/housing_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/housing_unit"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="8dp"
                android:entries="@array/housingunit_array"
                android:background="@drawable/backgroundg_spinner"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/property_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/backgroundg_spinner"
                android:entries="@array/propertytype_array">

            </Spinner>

            <TextView
                android:id="@+id/town_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town_area"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/backgroundg_spinner"
                android:entries="@array/town_array">

            </Spinner>

            <TextView
                android:id="@+id/tenure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenure1"
                android:textSize="21sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/tenure_value"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/round_edged_box"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floor_area_sqft"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/floor_area"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/round_edged_box"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address1"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/round_edged_box"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPostalAddress" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_bedrooms"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/no_of_bed"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:entries="@array/no_of"
                android:background="@drawable/backgroundg_spinner"
                />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_of_bathrooms"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/no_of_bath"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:entries="@array/no_of"
                android:background="@drawable/backgroundg_spinner"
                />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selling_price_s"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sell_price"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/round_edged_box"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="number" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description1"
                android:textSize="21sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_edged_box"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/savebtn" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>