<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/filter_dash_result"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner1"
            android:layout_alignParentStart="true"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/underline" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/property_type"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/backgroundg_spinner"
            android:entries="@array/propertytype_array"
            android:paddingLeft="10dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:text="@string/floor_area_sqft"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/backgroundg_spinner"
            android:entries="@array/floorarea_array"
            android:paddingLeft="10dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:paddingLeft="20dp"
            android:text="@string/town_area"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:background="@drawable/backgroundg_spinner"
            android:entries="@array/town_array"
            android:paddingLeft="10dp"
            android:spinnerMode="dropdown" />

        <!--<ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/pink" />
-->
        <!--<ImageView
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            app:srcCompat="@drawable/apply" />
-->    </LinearLayout>


</RelativeLayout>