<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".boundary.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/backgroundg_spinner"
        android:entries="@array/salutation"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0"></Spinner>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="263dp"
        android:layout_height="250dp"
        android:layout_marginBottom="229dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="42dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_edged_box"
        android:ems="10"
        android:hint="@string/name1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner1"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/round_edged_box"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_edged_box"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/round_edged_box"
        android:ems="10"
        android:hint="@string/phone_no1"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/signBtn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/sign_up" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="24dp"
        android:text="By signing up, you agree to our"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/signBtn"
        app:layout_constraintTop_toBottomOf="@+id/signBtn" />

    <Button
        android:id="@+id/termBtn"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="Terms &amp; Privacy Policy"
        android:textColor="#D3D3D3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.75" />

</android.support.constraint.ConstraintLayout>